k8s/rag-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-api
  namespace: ai-system
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    prometheus.io/path: /metrics
    prometheus.io/port: "8000"
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/name: rag-api
    app.kubernetes.io/part-of: llm-rag-infra-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rag-api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
